--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2675,7 +2675,39 @@ input, select, textarea {
 			-ms-transform: scale(1.05);
 			transform: scale(1.05);
 		}
-
+	
+		.content {
+			display: flex;
+		}
+		
+		.skills {
+			flex: 1;
+		}
+		
+		.image-scroller {
+			width: 500px; /* Set width for the square container */
+			height: 300px; /* Set height for the square container */
+			overflow: hidden;
+			position: relative;
+			margin-left: 20px;
+		}
+		
+		.image-container {
+			display: flex;
+			flex-direction: column;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			transition: transform 0.5s ease-in-out;
+		}
+		
+		.image-scroller img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+		
 /* Actions */
 
 	ul.actions {
